--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev ./src/index.ts"
+    "dev": "ts-node-dev ./src/index.ts",
+    "build": "tsc --p tsconfig.build.json",
+    "start:prod": "node ./dist/module/index.js"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
